--- a/src/app/articles/crafting-a-design-system-for-a-multiplanetary-future/page.mdx
+++ b/src/app/articles/crafting-a-design-system-for-a-multiplanetary-future/page.mdx
@@ -6,8 +6,7 @@ export const article = {
   author: 'Owen Roth',
   date: '2023-09-25',
   title: 'Coming Soon!',
-  description:
-    'Coming Soon!',
+  description: 'Coming Soon!',
 }
 
 export const metadata = {
@@ -28,7 +27,7 @@ After Image Paragraph.
 Paragraph
 
 ```js
-console.log("coming soon!")
+console.log('coming soon!')
 ```
 
 Paragraph
@@ -46,7 +45,7 @@ Intro 2
 Paragraph 2
 
 ```js
-console.log("TBD!")
+console.log('TBD!')
 ```
 
 Closing Paragraph
